<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="github_link" translatable="false"><a href="https://github.com/indywidualny/FaceSlim">github.com/indywidualny/FaceSlim</a></string>
    <string name="f_droid_link" translatable="false"><a href="https://f-droid.org/app/org.indywidualni.fblite">f-droid.org/app/org.indywidualni.fblite</a></string>
    <string name="indywidualni_link" translatable="false"><a href="http://indywidualni.org">indywidualni.org</a></string>
    <string name="get_feed_link" translatable="false">https://goo.gl/t3vJ33</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="special_thanks_notifications_link" translatable="false"><a href="https://github.com/creativetrendsapps">Creative Trends</a></string>
    <string name="predefined_user_agent" translatable="false">Mozilla/5.0 (BB10; Kbd) AppleWebKit/537.35+ (KHTML, like Gecko) Version/10.3.3.3057 Mobile Safari/537.35+</string>
    <string name="app_name">Face Slim</string>
    <string name="image_chooser">Image Chooser</string>
    <string name="loading_link">Opening a link</string>
    <string name="applying_changes">Applying changes</string>
    <string-array name="item_array">
        <item>News Feed (Home)</item>
        <item>Messenger.com</item>
        <item>Chat (Friends Online)</item>
        <item>Groups</item>
        <item>Events</item>
        <item>App Settings</item>
        <item>About &amp; Dev</item>
        <item>Copy current URL</item>
        <item>Add launcher shortcut</item>
        <item>Terminate</item>
        <item>Jump to Top\u0020 &#8593;</item>
    </string-array>
    <string name="author">by Krzysztof \'Koras\' Grabowski</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About &amp; Dev</string>
    <string name="preference_category1">Interface</string>
    <string name="preference_category2">Advanced Settings</string>
    <string name="progress_bar">Progress bar</string>
    <string name="suppress_audio_media">Disable Button Sounds</string>
    <string name="suppress_audio_media_description">Prohibit playing of Like Button reaction sounds and media clips.</string>
    <string name="transparent_nav">Transparent navbar &#8635;</string>
    <string name="transparent_nav_description">KitKat and Lollipop. Transparent system navigation keys.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_description">Clear app cache. It will also log you out.</string>
    <string name="email_author">Contact me</string>
    <string name="choose_email_client">Choose e-mail client</string>
    <string name="notifications">Notifications</string>
    <string name="no_network">You are offline</string>
    <string name="hardware_acceleration">Hardware Acceleration &#8635;</string>
    <string name="hardware_acceleration_description">Disable it only on low memory devices. Videos may not work.</string>
    <string name="share_link">Share the link</string>
    <string name="long_clicks">Long clicks</string>
    <string name="long_clicks_description">Long click a link or an image link to share.</string>
    <string name="me_google_play">Google Play</string>
    <string name="preference_category3">Experimental</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_description">Turn Facebook black.</string>
    <string name="fixed_nav">Fixed blue bar</string>
    <string name="fixed_nav_description">Facebook navigation bar always on top.</string>
    <string name="facebook_zero">Facebook Zero</string>
    <string name="facebook_zero_description">No data charges. GSM provider dependent. Works during mobile network connection.</string>
    <string name="facebook_zero_active">Facebook Zero is active</string>
    <string name="load_extra">Load external pictures</string>
    <string name="load_extra_description">Open external pictures in-app. Currently only few sites are supported.</string>
    <string name="preference_category4">Additional</string>
    <string name="quick_guide">Quick Start Guide</string>
    <string name="messages">Messages</string>
    <string name="donate_paypal">Donate\u0020 –\u0020 PayPal</string>
    <string name="donate_google">Donate\u0020 –\u0020 Google</string>
    <string name="paypal_url" formatted="false">https://www.paypal.com/cgi-bin/webscr?cmd=_donations&amp;business=koras%2eevil%40gmail%2ecom&amp;lc=GB&amp;item_name=Krzysztof%20Grabowski&amp;currency_code=USD&amp;bn=PP%2dDonationsBF%3abtn_donateCC_LG%2egif%3aNonHosted</string>
    <string-array name="drawerPosTitles">
        <item>on the left</item>
        <item>on the right</item>
    </string-array>
    <string name="drawer_pos">Sliding menu position &#8635;</string>
    <string name="drawer_pos_description">Menu is %s side of the screen.</string>
    <string name="preference_category5">Notifications</string>
    <string name="notifications_feed_url">Notifications feed</string>
    <string name="interval_pref">Time interval for checking</string>
    <string name="interval_pref_description">Notifications feed will be checked every %s.</string>
    <string name="activate_notifications">Activate notifications</string>
    <string name="get_feed">Get your notifications feed</string>
    <string name="get_feed_description">Click the field, find your unique notifications RSS, copy the address and paste it above.</string>
    <string name="notifications_service_created">Notifications active</string>
    <string name="notifications_settings">Notifications settings</string>
    <string name="notifications_settings_description">Additional settings. Choose time interval, set up sounds, LED and vibration.</string>
    <string-array name="intervalPrefTitles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
    </string-array>
    <string name="all_notifications">All notifications</string>
    <string name="notification_sound">Notification sound</string>
    <string name="notification_sound_description">Choose a ringtone or silence: \u0020</string>
    <string name="silent">No sound</string>
    <string name="vibrate">Vibrations</string>
    <string name="led_light">LED light</string>
    <string name="notifications_extra">Additional</string>
    <string name="notifications_everywhere">Always notify</string>
    <string name="notifications_everywhere_description">Also when you are on the main screen of the app.</string>
    <string name="setup_notifications">Visit app settings to set up notifications</string>
    <string name="no_images">Disable images &#8635;</string>
    <string name="no_images_description">Don\'t load any images. Reduces data usage drastically.</string>
    <string name="no_storage_permission">Grant storage permission to use this feature</string>
    <string name="basic_mode">Basic mode</string>
    <string name="basic_mode_description">Use a basic website instead of a standard one. Dark theme has to be disabled. May not work during a fast connection.</string>
    <string name="preference_category6">News Feed</string>
    <string name="hide_sponsored">Hide some sponsored posts</string>
    <string name="hide_sponsored_description">We don\'t like sponsored posts and ads.</string>
    <string name="hide_people">Hide people you may know</string>
    <string name="hide_people_description">Cleaner feed, more room.</string>
    <string name="hide_news_feed">Hide News Feed</string>
    <string name="hide_news_feed_description">[…] to avoid sidetracking / procrastination.</string>
    <string name="message_notifications">Message notifications</string>
    <string name="you_have_one_message">You have one message.</string>
    <string name="you_have_n_messages">You have %d messages.</string>
    <string name="special_thanks_notifications">Special thanks for help with notifications:</string>
    <string name="sync_problem">Cookies cannot be synced. First run, yeah? Please just restart Face Slim :)</string>
    <string name="interval_pref_description_new">Notifications will be checked every %s.</string>
    <string name="facebook_notifications">Facebook notifications</string>
    <string name="notification_sound_msg">Message sound</string>
    <string name="crash_toast_text">Face Slim: Something is very wrong. Preparing crash report</string>
    <string name="crash_dialog_title">Face Slim has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help me fix this by sending me error data. All you have to do is to click OK and send an e-mail.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="file_logger">Save logs to a file</string>
    <string name="file_logger_description">Save Notification Service logs to an external memory. It needs a storage permission.</string>
    <string name="file_logger_needs_permission">No access to external storage. Log cannot be saved</string>
    <string name="save_img">Save image</string>
    <string name="downloading_img">Downloading image&#8230;</string>
    <string name="download_manager_disabled">DownloadManager is disabled. Please enable it.</string>
    <string name="cannot_access_storage">No access to external storage</string>
    <string name="file_cannot_be_saved">A file cannot be saved</string>
    <string name="camera_exception">Problems with a camera</string>
    <string name="offline_mode">Offline mode</string>
    <string name="offline_mode_enable">Enable offline mode</string>
    <string name="offline_mode_description">When there is no Internet connection try to load a page from cache and the database.</string>
    <string name="not_found_offline" formatted="false"><![CDATA[<div style=\"position: absolute;top: 50%;left: 50%;transform: translateX(-50%) translateY(-50%);\"><div><h1>Unfortunately this page was not found in offline database</h1><h1>Tip: to go back just go back twice</h1></div></div>]]></string>
    <string name="loading_offline_database">Loading page from offline database</string>
    <string name="offline_keep_max">Max number of pages to keep</string>
    <string name="offline_keep_max_description">When online visited pages are asynchronously saved in the database. A default value is (latest) 10 pages.</string>
    <string name="offline_dummy_description">The source code of the current page is asynchronously saved in the database. If a duplicate is found it will be replaced. Refresh a page to force update it. It doesn\'t work for a dynamically loaded content.</string>
    <string name="keyboard_fix">Overlaying keyboard fix &#8635;</string>
    <string name="offline_database_empty">Offline database is empty</string>
    <string name="no_location_permission">Grant location permission to use this feature</string>
    <string name="location_access">Enable geolocation</string>
    <string name="custom_user_agent">Custom User Agent &#8635;</string>
    <string name="custom_user_agent_description">Use your own User Agent String.</string>
    <string name="custom_user_agent_hint">Blank for default</string>
    <string name="touch_mode">Touch mode</string>
    <string name="touch_mode_description">Use touch.facebook.com website.</string>
    <string name="new_version_detected">New app version is available</string>
    <string name="check_for_updates">Check for app updates</string>
    <string name="font_size">Text scale</string>
    <string name="font_size_description">Change text size (percent).</string>
    <string name="font_size_hint">100 is 100%</string>
    <string name="most_recent">Start with most recent posts</string>
</resources>