<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/notifications_settings">

        <ListPreference
            android:title="@string/interval_pref"
            android:summary="@string/interval_pref_description"
            android:key="interval_pref"
            android:defaultValue="2"
            android:entries="@array/intervalPrefTitles"
            android:entryValues="@array/intervalPrefValues"/>

        <RingtonePreference
            android:key="ringtone"
            android:ringtoneType="notification"
            android:showDefault="true"
            android:showSilent="true"
            android:defaultValue="content://settings/system/notification_sound"
            android:title="@string/notification_sound"
            android:summary="@string/notification_sound_description" />

        <CheckBoxPreference
            android:key="vibrate"
            android:title="@string/vibrate"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="led_light"
            android:title="@string/led_light"
            android:defaultValue="false"/>

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/notifications_extra">

        <CheckBoxPreference
            android:key="notifications_everywhere"
            android:title="@string/notifications_everywhere"
            android:summary="@string/notifications_everywhere_description"
            android:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>