<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:padding="20dp"
        android:textColor="@color/aboutText" />

    <TextView
        android:id="@+id/textSpecialThanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textAuthor"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="0dp"
        android:text="@string/special_thanks_notifications" />

    <TextView
        android:id="@+id/textSpecialThanksLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSpecialThanks"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:paddingBottom="20dp"
        android:text="@string/special_thanks_notifications_link"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textGithub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textSpecialThanksLink"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="0dp"
        android:text="@string/github_link"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textFdroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textGithub"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:padding="0dp"
        android:text="@string/f_droid_link"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textIndywidualni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFdroid"
        android:padding="20dp"
        android:text="@string/indywidualni_link"
        android:textColorLink="@color/colorPrimary" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:textColor="@color/aboutText" />

</RelativeLayout>